// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarketplacePage should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Apps
          </h1>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <h2
            class="el-subtitle"
          >
            AppMarket Visibility and Installation Management
          </h2>
          <p
            class="el-has-grey-text el-body-text"
          >
            To set the visibility of an app in the AppMarket or to manage installations for your organisation or specific office groups, please select an app.
          </p>
          <div
            class="el-mb5"
          >
            <h2
              class="el-subtitle"
            >
              Organisations
            </h2>
            <p
              class="el-has-grey-text el-body-text"
            >
              You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
            </p>
            <div
              class="el-border-radius controls-container"
            >
              <div
                class="el-input-group"
              >
                <select
                  class="el-wfull el-select"
                >
                  <option
                    value=""
                  >
                    Please Select
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                </select>
                <label
                  class="el-label"
                  for="myId"
                >
                  Select Organisation
                </label>
              </div>
            </div>
          </div>
          <div
            class="controls-container"
          >
            <div
              class="input-full-width el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="searchTerm"
                placeholder="Developer or App"
                type="text"
                value=""
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Search
              </label>
            </div>
          </div>
        </aside>
        <section
          class="el-hfull el-page-container"
        >
          <div
            class="el-flex-justify-between el-flex-container"
          >
            <h1
              class="el-title"
            >
              SOME_NAME
               AppMarket
            </h1>
          </div>
          <div
            class="el-grid"
          >
            <div
              class="el-col"
            >
              <div
                class="el-fade-in el-card-wrap"
              >
                <div
                  class="el-card-main-wrap"
                >
                  <div
                    class="el-card-heading-wrap"
                  >
                    <h5
                      class="el-card-heading"
                    >
                      Test App Dev
                    </h5>
                    <h6
                      class="el-card-sub-heading"
                    >
                      DFG
                    </h6>
                    <h6
                      class="el-card-sub-heading-additional"
                    >
                      Integration
                    </h6>
                  </div>
                </div>
                <div
                  class="el-mb5 el-card-body-wrap"
                />
                <div
                  class="el-card-list-main-wrap"
                >
                  <h5
                    class="el-card-list-heading"
                  >
                    Installation and Visibility
                  </h5>
                  <h6
                    class="el-card-list-sub-heading"
                  />
                </div>
                <div
                  class="el-card-list-item"
                >
                  <div
                    class="el-card-list-icon"
                  >
                    <span
                      class="el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-list-item-text-wrap"
                  >
                    <div
                      class="el-card-list-item-text-primary"
                    >
                      Installation Status
                    </div>
                    <div
                      class="el-card-list-item-text-secondary"
                    >
                      Not installed
                    </div>
                  </div>
                </div>
                <div
                  class="el-card-list-item"
                >
                  <div
                    class="el-card-list-icon"
                  >
                    <span
                      class="el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-list-item-text-wrap"
                  >
                    <div
                      class="el-card-list-item-text-primary"
                    >
                      Marketplace Visibility
                    </div>
                    <div
                      class="el-card-list-item-text-secondary"
                    >
                      Marketplace visible
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="el-col"
            >
              <div
                class="el-fade-in el-card-wrap"
              >
                <div
                  class="el-card-main-wrap"
                >
                  <div
                    class="el-card-image-wrap"
                  >
                    <img
                      src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Reapit-Insights-icon.png"
                    />
                  </div>
                  <div
                    class="el-card-heading-wrap"
                  >
                    <h5
                      class="el-card-heading"
                    >
                      Reapit Insights
                    </h5>
                    <h6
                      class="el-card-sub-heading"
                    >
                      Reapit Ltd
                    </h6>
                    <h6
                      class="el-card-sub-heading-additional"
                    />
                  </div>
                </div>
                <div
                  class="el-mb5 el-card-body-wrap"
                >
                  Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah.
                </div>
                <div
                  class="el-card-list-main-wrap"
                >
                  <h5
                    class="el-card-list-heading"
                  >
                    Installation and Visibility
                  </h5>
                  <h6
                    class="el-card-list-sub-heading"
                  />
                </div>
                <div
                  class="el-card-list-item"
                >
                  <div
                    class="el-card-list-icon"
                  >
                    <span
                      class="el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-list-item-text-wrap"
                  >
                    <div
                      class="el-card-list-item-text-primary"
                    >
                      Installation Status
                    </div>
                    <div
                      class="el-card-list-item-text-secondary"
                    >
                      Not installed
                    </div>
                  </div>
                </div>
                <div
                  class="el-card-list-item"
                >
                  <div
                    class="el-card-list-icon"
                  >
                    <span
                      class="el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-list-item-text-wrap"
                  >
                    <div
                      class="el-card-list-item-text-primary"
                    >
                      Marketplace Visibility
                    </div>
                    <div
                      class="el-card-list-item-text-secondary"
                    >
                      Marketplace visible
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="el-col"
            >
              <div
                class="el-fade-in el-card-wrap"
              >
                <div
                  class="el-card-main-wrap"
                >
                  <div
                    class="el-card-image-wrap"
                  >
                    <img
                      src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Reapit-Connect-Management-icon.png"
                    />
                  </div>
                  <div
                    class="el-card-heading-wrap"
                  >
                    <h5
                      class="el-card-heading"
                    >
                      Marketplace Management
                    </h5>
                    <h6
                      class="el-card-sub-heading"
                    >
                      Reapit Ltd
                    </h6>
                    <h6
                      class="el-card-sub-heading-additional"
                    />
                  </div>
                </div>
                <div
                  class="el-mb5 el-card-body-wrap"
                >
                  Description Description Description Description Description Description Description Description
                </div>
                <div
                  class="el-card-list-main-wrap"
                >
                  <h5
                    class="el-card-list-heading"
                  >
                    Installation and Visibility
                  </h5>
                  <h6
                    class="el-card-list-sub-heading"
                  />
                </div>
                <div
                  class="el-card-list-item"
                >
                  <div
                    class="el-card-list-icon"
                  >
                    <span
                      class="el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-list-item-text-wrap"
                  >
                    <div
                      class="el-card-list-item-text-primary"
                    >
                      Installation Status
                    </div>
                    <div
                      class="el-card-list-item-text-secondary"
                    >
                      Not installed
                    </div>
                  </div>
                </div>
                <div
                  class="el-card-list-item"
                >
                  <div
                    class="el-card-list-icon"
                  >
                    <span
                      class="el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-list-item-text-wrap"
                  >
                    <div
                      class="el-card-list-item-text-primary"
                    >
                      Marketplace Visibility
                    </div>
                    <div
                      class="el-card-list-item-text-secondary"
                    >
                      Marketplace visible
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="el-col"
            >
              <div
                class="el-fade-in el-card-wrap"
              >
                <div
                  class="el-card-main-wrap"
                >
                  <div
                    class="el-card-image-wrap"
                  >
                    <img
                      src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Holly-Test-App-icon(1).png"
                    />
                  </div>
                  <div
                    class="el-card-heading-wrap"
                  >
                    <h5
                      class="el-card-heading"
                    >
                      Holly Test App
                    </h5>
                    <h6
                      class="el-card-sub-heading"
                    >
                      Holly Phillips Testing
                    </h6>
                    <h6
                      class="el-card-sub-heading-additional"
                    />
                  </div>
                </div>
                <div
                  class="el-mb5 el-card-body-wrap"
                >
                  https://holly.com https://holly.com https://holly.com https://holly.comhttps://holly.com https://holly.comhttps://holly.com https://holly.com
                </div>
                <div
                  class="el-card-list-main-wrap"
                >
                  <h5
                    class="el-card-list-heading"
                  >
                    Installation and Visibility
                  </h5>
                  <h6
                    class="el-card-list-sub-heading"
                  />
                </div>
                <div
                  class="el-card-list-item"
                >
                  <div
                    class="el-card-list-icon"
                  >
                    <span
                      class="el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-list-item-text-wrap"
                  >
                    <div
                      class="el-card-list-item-text-primary"
                    >
                      Installation Status
                    </div>
                    <div
                      class="el-card-list-item-text-secondary"
                    >
                      Not installed
                    </div>
                  </div>
                </div>
                <div
                  class="el-card-list-item"
                >
                  <div
                    class="el-card-list-icon"
                  >
                    <span
                      class="el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-list-item-text-wrap"
                  >
                    <div
                      class="el-card-list-item-text-primary"
                    >
                      Marketplace Visibility
                    </div>
                    <div
                      class="el-card-list-item-text-secondary"
                    >
                      Marketplace hidden
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="el-col"
            >
              <div
                class="el-fade-in el-card-wrap"
              >
                <div
                  class="el-card-main-wrap"
                >
                  <div
                    class="el-card-image-wrap"
                  >
                    <img
                      src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Reapit-Payments-Portal-icon.png"
                    />
                  </div>
                  <div
                    class="el-card-heading-wrap"
                  >
                    <h5
                      class="el-card-heading"
                    >
                      Reapit Payments Portal
                    </h5>
                    <h6
                      class="el-card-sub-heading"
                    >
                      Reapit Ltd
                    </h6>
                    <h6
                      class="el-card-sub-heading-additional"
                    />
                  </div>
                </div>
                <div
                  class="el-mb5 el-card-body-wrap"
                >
                  It takes your money and sends it to Sage Pay. Then it updates RPS.
                </div>
                <div
                  class="el-card-list-main-wrap"
                >
                  <h5
                    class="el-card-list-heading"
                  >
                    Installation and Visibility
                  </h5>
                  <h6
                    class="el-card-list-sub-heading"
                  />
                </div>
                <div
                  class="el-card-list-item"
                >
                  <div
                    class="el-card-list-icon"
                  >
                    <span
                      class="el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-list-item-text-wrap"
                  >
                    <div
                      class="el-card-list-item-text-primary"
                    >
                      Installation Status
                    </div>
                    <div
                      class="el-card-list-item-text-secondary"
                    >
                      Not installed
                    </div>
                  </div>
                </div>
                <div
                  class="el-card-list-item"
                >
                  <div
                    class="el-card-list-icon"
                  >
                    <span
                      class="el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-list-item-text-wrap"
                  >
                    <div
                      class="el-card-list-item-text-primary"
                    >
                      Marketplace Visibility
                    </div>
                    <div
                      class="el-card-list-item-text-secondary"
                    >
                      Marketplace visible
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="el-col"
            >
              <div
                class="el-fade-in el-card-wrap"
              >
                <div
                  class="el-card-main-wrap"
                >
                  <div
                    class="el-card-image-wrap"
                  >
                    <img
                      src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Data-Warehouse-icon.png"
                    />
                  </div>
                  <div
                    class="el-card-heading-wrap"
                  >
                    <h5
                      class="el-card-heading"
                    >
                      Data Warehouse
                    </h5>
                    <h6
                      class="el-card-sub-heading"
                    >
                      Reapit Ltd
                    </h6>
                    <h6
                      class="el-card-sub-heading-additional"
                    />
                  </div>
                </div>
                <div
                  class="el-mb5 el-card-body-wrap"
                >
                  The data warehouse houses lots of data. The data warehouse houses lots of data.
                </div>
                <div
                  class="el-card-list-main-wrap"
                >
                  <h5
                    class="el-card-list-heading"
                  >
                    Installation and Visibility
                  </h5>
                  <h6
                    class="el-card-list-sub-heading"
                  />
                </div>
                <div
                  class="el-card-list-item"
                >
                  <div
                    class="el-card-list-icon"
                  >
                    <span
                      class="el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-list-item-text-wrap"
                  >
                    <div
                      class="el-card-list-item-text-primary"
                    >
                      Installation Status
                    </div>
                    <div
                      class="el-card-list-item-text-secondary"
                    >
                      Not installed
                    </div>
                  </div>
                </div>
                <div
                  class="el-card-list-item"
                >
                  <div
                    class="el-card-list-icon"
                  >
                    <span
                      class="el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-list-item-text-wrap"
                  >
                    <div
                      class="el-card-list-item-text-primary"
                    >
                      Marketplace Visibility
                    </div>
                    <div
                      class="el-card-list-item-text-secondary"
                    >
                      Marketplace hidden
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="el-col"
            >
              <div
                class="el-fade-in el-card-wrap"
              >
                <div
                  class="el-card-main-wrap"
                >
                  <div
                    class="el-card-image-wrap"
                  >
                    <img
                      src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Reapit-Connect-icon.png"
                    />
                  </div>
                  <div
                    class="el-card-heading-wrap"
                  >
                    <h5
                      class="el-card-heading"
                    >
                      Reapit Connect
                    </h5>
                    <h6
                      class="el-card-sub-heading"
                    >
                      Reapit Ltd
                    </h6>
                    <h6
                      class="el-card-sub-heading-additional"
                    >
                      Integration
                    </h6>
                  </div>
                </div>
                <div
                  class="el-mb5 el-card-body-wrap"
                >
                  Reapit Connect removes the overhead of having to build and maintain a user credential directory for your app.
                </div>
                <div
                  class="el-card-list-main-wrap"
                >
                  <h5
                    class="el-card-list-heading"
                  >
                    Installation and Visibility
                  </h5>
                  <h6
                    class="el-card-list-sub-heading"
                  />
                </div>
                <div
                  class="el-card-list-item"
                >
                  <div
                    class="el-card-list-icon"
                  >
                    <span
                      class="el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-list-item-text-wrap"
                  >
                    <div
                      class="el-card-list-item-text-primary"
                    >
                      Installation Status
                    </div>
                    <div
                      class="el-card-list-item-text-secondary"
                    >
                      Not installed
                    </div>
                  </div>
                </div>
                <div
                  class="el-card-list-item"
                >
                  <div
                    class="el-card-list-icon"
                  >
                    <span
                      class="el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-list-item-text-wrap"
                  >
                    <div
                      class="el-card-list-item-text-primary"
                    >
                      Marketplace Visibility
                    </div>
                    <div
                      class="el-card-list-item-text-secondary"
                    >
                      Marketplace hidden
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="el-col"
            >
              <div
                class="el-fade-in el-card-wrap"
              >
                <div
                  class="el-card-main-wrap"
                >
                  <div
                    class="el-card-image-wrap"
                  >
                    <img
                      src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
                    />
                  </div>
                  <div
                    class="el-card-heading-wrap"
                  >
                    <h5
                      class="el-card-heading"
                    >
                      Online Check List
                    </h5>
                    <h6
                      class="el-card-sub-heading"
                    >
                      Reapit Ltd
                    </h6>
                    <h6
                      class="el-card-sub-heading-additional"
                    />
                  </div>
                </div>
                <div
                  class="el-mb5 el-card-body-wrap"
                >
                  Helps you to get organised, simplify your workflow, and to ensure checks are carried out. Manage your checks online from anywhere.
                </div>
                <div
                  class="el-card-list-main-wrap"
                >
                  <h5
                    class="el-card-list-heading"
                  >
                    Installation and Visibility
                  </h5>
                  <h6
                    class="el-card-list-sub-heading"
                  />
                </div>
                <div
                  class="el-card-list-item"
                >
                  <div
                    class="el-card-list-icon"
                  >
                    <span
                      class="el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-list-item-text-wrap"
                  >
                    <div
                      class="el-card-list-item-text-primary"
                    >
                      Installation Status
                    </div>
                    <div
                      class="el-card-list-item-text-secondary"
                    >
                      Not installed
                    </div>
                  </div>
                </div>
                <div
                  class="el-card-list-item"
                >
                  <div
                    class="el-card-list-icon"
                  >
                    <span
                      class="el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-list-item-text-wrap"
                  >
                    <div
                      class="el-card-list-item-text-primary"
                    >
                      Marketplace Visibility
                    </div>
                    <div
                      class="el-card-list-item-text-secondary"
                    >
                      Marketplace visible
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="el-col"
            >
              <div
                class="el-fade-in el-card-wrap"
              >
                <div
                  class="el-card-main-wrap"
                >
                  <div
                    class="el-card-image-wrap"
                  >
                    <img
                      src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Geo-Diary-icon.png"
                    />
                  </div>
                  <div
                    class="el-card-heading-wrap"
                  >
                    <h5
                      class="el-card-heading"
                    >
                      Geo Diary
                    </h5>
                    <h6
                      class="el-card-sub-heading"
                    >
                      Reapit Ltd
                    </h6>
                    <h6
                      class="el-card-sub-heading-additional"
                    />
                  </div>
                </div>
                <div
                  class="el-mb5 el-card-body-wrap"
                >
                  GEO Diary is the App for the Negotiator on the go, instant access to your daily & weekly appointments.
                </div>
                <div
                  class="el-card-list-main-wrap"
                >
                  <h5
                    class="el-card-list-heading"
                  >
                    Installation and Visibility
                  </h5>
                  <h6
                    class="el-card-list-sub-heading"
                  />
                </div>
                <div
                  class="el-card-list-item"
                >
                  <div
                    class="el-card-list-icon"
                  >
                    <span
                      class="el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-list-item-text-wrap"
                  >
                    <div
                      class="el-card-list-item-text-primary"
                    >
                      Installation Status
                    </div>
                    <div
                      class="el-card-list-item-text-secondary"
                    >
                      Not installed
                    </div>
                  </div>
                </div>
                <div
                  class="el-card-list-item"
                >
                  <div
                    class="el-card-list-icon"
                  >
                    <span
                      class="el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                  <div
                    class="el-card-list-item-text-wrap"
                  >
                    <div
                      class="el-card-list-item-text-primary"
                    >
                      Marketplace Visibility
                    </div>
                    <div
                      class="el-card-list-item-text-secondary"
                    >
                      Marketplace visible
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="el-pagination-wrap"
          >
            <div
              class="el-pagination-text"
            >
              <input
                class="el-pagination-input"
                value="1"
              />
               of 
              1
            </div>
            <button
              class="el-pagination-button"
              data-testid="back-button"
              type="button"
            >
              <span
                class="el-icon"
              >
                <svg />
              </span>
            </button>
            <button
              class="el-pagination-button"
              data-testid="forward-button"
              type="button"
            >
              <span
                class="el-icon"
              >
                <svg />
              </span>
            </button>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Apps
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <h2
          class="el-subtitle"
        >
          AppMarket Visibility and Installation Management
        </h2>
        <p
          class="el-has-grey-text el-body-text"
        >
          To set the visibility of an app in the AppMarket or to manage installations for your organisation or specific office groups, please select an app.
        </p>
        <div
          class="el-mb5"
        >
          <h2
            class="el-subtitle"
          >
            Organisations
          </h2>
          <p
            class="el-has-grey-text el-body-text"
          >
            You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
          </p>
          <div
            class="el-border-radius controls-container"
          >
            <div
              class="el-input-group"
            >
              <select
                class="el-wfull el-select"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
                <option
                  value="value"
                >
                  name
                </option>
                <option
                  value="value"
                >
                  name
                </option>
              </select>
              <label
                class="el-label"
                for="myId"
              >
                Select Organisation
              </label>
            </div>
          </div>
        </div>
        <div
          class="controls-container"
        >
          <div
            class="input-full-width el-input-group"
          >
            <input
              class="el-input"
              id="test-static-id"
              name="searchTerm"
              placeholder="Developer or App"
              type="text"
              value=""
            />
            <label
              class="el-label"
              for="test-static-id"
            >
              Search
            </label>
          </div>
        </div>
      </aside>
      <section
        class="el-hfull el-page-container"
      >
        <div
          class="el-flex-justify-between el-flex-container"
        >
          <h1
            class="el-title"
          >
            SOME_NAME
             AppMarket
          </h1>
        </div>
        <div
          class="el-grid"
        >
          <div
            class="el-col"
          >
            <div
              class="el-fade-in el-card-wrap"
            >
              <div
                class="el-card-main-wrap"
              >
                <div
                  class="el-card-heading-wrap"
                >
                  <h5
                    class="el-card-heading"
                  >
                    Test App Dev
                  </h5>
                  <h6
                    class="el-card-sub-heading"
                  >
                    DFG
                  </h6>
                  <h6
                    class="el-card-sub-heading-additional"
                  >
                    Integration
                  </h6>
                </div>
              </div>
              <div
                class="el-mb5 el-card-body-wrap"
              />
              <div
                class="el-card-list-main-wrap"
              >
                <h5
                  class="el-card-list-heading"
                >
                  Installation and Visibility
                </h5>
                <h6
                  class="el-card-list-sub-heading"
                />
              </div>
              <div
                class="el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Installation Status
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Not installed
                  </div>
                </div>
              </div>
              <div
                class="el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Marketplace Visibility
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Marketplace visible
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="el-col"
          >
            <div
              class="el-fade-in el-card-wrap"
            >
              <div
                class="el-card-main-wrap"
              >
                <div
                  class="el-card-image-wrap"
                >
                  <img
                    src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Reapit-Insights-icon.png"
                  />
                </div>
                <div
                  class="el-card-heading-wrap"
                >
                  <h5
                    class="el-card-heading"
                  >
                    Reapit Insights
                  </h5>
                  <h6
                    class="el-card-sub-heading"
                  >
                    Reapit Ltd
                  </h6>
                  <h6
                    class="el-card-sub-heading-additional"
                  />
                </div>
              </div>
              <div
                class="el-mb5 el-card-body-wrap"
              >
                Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah.
              </div>
              <div
                class="el-card-list-main-wrap"
              >
                <h5
                  class="el-card-list-heading"
                >
                  Installation and Visibility
                </h5>
                <h6
                  class="el-card-list-sub-heading"
                />
              </div>
              <div
                class="el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Installation Status
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Not installed
                  </div>
                </div>
              </div>
              <div
                class="el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Marketplace Visibility
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Marketplace visible
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="el-col"
          >
            <div
              class="el-fade-in el-card-wrap"
            >
              <div
                class="el-card-main-wrap"
              >
                <div
                  class="el-card-image-wrap"
                >
                  <img
                    src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Reapit-Connect-Management-icon.png"
                  />
                </div>
                <div
                  class="el-card-heading-wrap"
                >
                  <h5
                    class="el-card-heading"
                  >
                    Marketplace Management
                  </h5>
                  <h6
                    class="el-card-sub-heading"
                  >
                    Reapit Ltd
                  </h6>
                  <h6
                    class="el-card-sub-heading-additional"
                  />
                </div>
              </div>
              <div
                class="el-mb5 el-card-body-wrap"
              >
                Description Description Description Description Description Description Description Description
              </div>
              <div
                class="el-card-list-main-wrap"
              >
                <h5
                  class="el-card-list-heading"
                >
                  Installation and Visibility
                </h5>
                <h6
                  class="el-card-list-sub-heading"
                />
              </div>
              <div
                class="el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Installation Status
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Not installed
                  </div>
                </div>
              </div>
              <div
                class="el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Marketplace Visibility
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Marketplace visible
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="el-col"
          >
            <div
              class="el-fade-in el-card-wrap"
            >
              <div
                class="el-card-main-wrap"
              >
                <div
                  class="el-card-image-wrap"
                >
                  <img
                    src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Holly-Test-App-icon(1).png"
                  />
                </div>
                <div
                  class="el-card-heading-wrap"
                >
                  <h5
                    class="el-card-heading"
                  >
                    Holly Test App
                  </h5>
                  <h6
                    class="el-card-sub-heading"
                  >
                    Holly Phillips Testing
                  </h6>
                  <h6
                    class="el-card-sub-heading-additional"
                  />
                </div>
              </div>
              <div
                class="el-mb5 el-card-body-wrap"
              >
                https://holly.com https://holly.com https://holly.com https://holly.comhttps://holly.com https://holly.comhttps://holly.com https://holly.com
              </div>
              <div
                class="el-card-list-main-wrap"
              >
                <h5
                  class="el-card-list-heading"
                >
                  Installation and Visibility
                </h5>
                <h6
                  class="el-card-list-sub-heading"
                />
              </div>
              <div
                class="el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Installation Status
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Not installed
                  </div>
                </div>
              </div>
              <div
                class="el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Marketplace Visibility
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Marketplace hidden
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="el-col"
          >
            <div
              class="el-fade-in el-card-wrap"
            >
              <div
                class="el-card-main-wrap"
              >
                <div
                  class="el-card-image-wrap"
                >
                  <img
                    src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Reapit-Payments-Portal-icon.png"
                  />
                </div>
                <div
                  class="el-card-heading-wrap"
                >
                  <h5
                    class="el-card-heading"
                  >
                    Reapit Payments Portal
                  </h5>
                  <h6
                    class="el-card-sub-heading"
                  >
                    Reapit Ltd
                  </h6>
                  <h6
                    class="el-card-sub-heading-additional"
                  />
                </div>
              </div>
              <div
                class="el-mb5 el-card-body-wrap"
              >
                It takes your money and sends it to Sage Pay. Then it updates RPS.
              </div>
              <div
                class="el-card-list-main-wrap"
              >
                <h5
                  class="el-card-list-heading"
                >
                  Installation and Visibility
                </h5>
                <h6
                  class="el-card-list-sub-heading"
                />
              </div>
              <div
                class="el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Installation Status
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Not installed
                  </div>
                </div>
              </div>
              <div
                class="el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Marketplace Visibility
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Marketplace visible
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="el-col"
          >
            <div
              class="el-fade-in el-card-wrap"
            >
              <div
                class="el-card-main-wrap"
              >
                <div
                  class="el-card-image-wrap"
                >
                  <img
                    src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Data-Warehouse-icon.png"
                  />
                </div>
                <div
                  class="el-card-heading-wrap"
                >
                  <h5
                    class="el-card-heading"
                  >
                    Data Warehouse
                  </h5>
                  <h6
                    class="el-card-sub-heading"
                  >
                    Reapit Ltd
                  </h6>
                  <h6
                    class="el-card-sub-heading-additional"
                  />
                </div>
              </div>
              <div
                class="el-mb5 el-card-body-wrap"
              >
                The data warehouse houses lots of data. The data warehouse houses lots of data.
              </div>
              <div
                class="el-card-list-main-wrap"
              >
                <h5
                  class="el-card-list-heading"
                >
                  Installation and Visibility
                </h5>
                <h6
                  class="el-card-list-sub-heading"
                />
              </div>
              <div
                class="el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Installation Status
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Not installed
                  </div>
                </div>
              </div>
              <div
                class="el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Marketplace Visibility
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Marketplace hidden
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="el-col"
          >
            <div
              class="el-fade-in el-card-wrap"
            >
              <div
                class="el-card-main-wrap"
              >
                <div
                  class="el-card-image-wrap"
                >
                  <img
                    src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Reapit-Connect-icon.png"
                  />
                </div>
                <div
                  class="el-card-heading-wrap"
                >
                  <h5
                    class="el-card-heading"
                  >
                    Reapit Connect
                  </h5>
                  <h6
                    class="el-card-sub-heading"
                  >
                    Reapit Ltd
                  </h6>
                  <h6
                    class="el-card-sub-heading-additional"
                  >
                    Integration
                  </h6>
                </div>
              </div>
              <div
                class="el-mb5 el-card-body-wrap"
              >
                Reapit Connect removes the overhead of having to build and maintain a user credential directory for your app.
              </div>
              <div
                class="el-card-list-main-wrap"
              >
                <h5
                  class="el-card-list-heading"
                >
                  Installation and Visibility
                </h5>
                <h6
                  class="el-card-list-sub-heading"
                />
              </div>
              <div
                class="el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Installation Status
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Not installed
                  </div>
                </div>
              </div>
              <div
                class="el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Marketplace Visibility
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Marketplace hidden
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="el-col"
          >
            <div
              class="el-fade-in el-card-wrap"
            >
              <div
                class="el-card-main-wrap"
              >
                <div
                  class="el-card-image-wrap"
                >
                  <img
                    src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
                  />
                </div>
                <div
                  class="el-card-heading-wrap"
                >
                  <h5
                    class="el-card-heading"
                  >
                    Online Check List
                  </h5>
                  <h6
                    class="el-card-sub-heading"
                  >
                    Reapit Ltd
                  </h6>
                  <h6
                    class="el-card-sub-heading-additional"
                  />
                </div>
              </div>
              <div
                class="el-mb5 el-card-body-wrap"
              >
                Helps you to get organised, simplify your workflow, and to ensure checks are carried out. Manage your checks online from anywhere.
              </div>
              <div
                class="el-card-list-main-wrap"
              >
                <h5
                  class="el-card-list-heading"
                >
                  Installation and Visibility
                </h5>
                <h6
                  class="el-card-list-sub-heading"
                />
              </div>
              <div
                class="el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Installation Status
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Not installed
                  </div>
                </div>
              </div>
              <div
                class="el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Marketplace Visibility
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Marketplace visible
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="el-col"
          >
            <div
              class="el-fade-in el-card-wrap"
            >
              <div
                class="el-card-main-wrap"
              >
                <div
                  class="el-card-image-wrap"
                >
                  <img
                    src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Geo-Diary-icon.png"
                  />
                </div>
                <div
                  class="el-card-heading-wrap"
                >
                  <h5
                    class="el-card-heading"
                  >
                    Geo Diary
                  </h5>
                  <h6
                    class="el-card-sub-heading"
                  >
                    Reapit Ltd
                  </h6>
                  <h6
                    class="el-card-sub-heading-additional"
                  />
                </div>
              </div>
              <div
                class="el-mb5 el-card-body-wrap"
              >
                GEO Diary is the App for the Negotiator on the go, instant access to your daily & weekly appointments.
              </div>
              <div
                class="el-card-list-main-wrap"
              >
                <h5
                  class="el-card-list-heading"
                >
                  Installation and Visibility
                </h5>
                <h6
                  class="el-card-list-sub-heading"
                />
              </div>
              <div
                class="el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Installation Status
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Not installed
                  </div>
                </div>
              </div>
              <div
                class="el-card-list-item"
              >
                <div
                  class="el-card-list-icon"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="el-card-list-item-text-wrap"
                >
                  <div
                    class="el-card-list-item-text-primary"
                  >
                    Marketplace Visibility
                  </div>
                  <div
                    class="el-card-list-item-text-secondary"
                  >
                    Marketplace visible
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-pagination-wrap"
        >
          <div
            class="el-pagination-text"
          >
            <input
              class="el-pagination-input"
              value="1"
            />
             of 
            1
          </div>
          <button
            class="el-pagination-button"
            data-testid="back-button"
            type="button"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </button>
          <button
            class="el-pagination-button"
            data-testid="forward-button"
            type="button"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </button>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MarketplacePage should match a snapshot where no orgClientId exists 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Apps
          </h1>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <h2
            class="el-subtitle"
          >
            AppMarket Visibility and Installation Management
          </h2>
          <p
            class="el-has-grey-text el-body-text"
          >
            To set the visibility of an app in the AppMarket or to manage installations for your organisation or specific office groups, please select an app.
          </p>
          <div
            class="el-mb5"
          >
            <h2
              class="el-subtitle"
            >
              Organisations
            </h2>
            <p
              class="el-has-grey-text el-body-text"
            >
              You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
            </p>
            <div
              class="el-border-radius controls-container"
            >
              <div
                class="el-input-group"
              >
                <select
                  class="el-wfull el-select"
                >
                  <option
                    value=""
                  >
                    Please Select
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                </select>
                <label
                  class="el-label"
                  for="myId"
                >
                  Select Organisation
                </label>
              </div>
            </div>
          </div>
          <div
            class="controls-container"
          >
            <div
              class="input-full-width el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="searchTerm"
                placeholder="Developer or App"
                type="text"
                value=""
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Search
              </label>
            </div>
          </div>
        </aside>
        <section
          class="el-hfull el-page-container"
        >
          <div
            class="el-flex-justify-between el-flex-container"
          >
            <h1
              class="el-title"
            >
               AppMarket
            </h1>
          </div>
          <div
            class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
          >
            <div
              class="el-pn-icon"
              data-testid="close-icon"
            >
              <span
                class="el-icon"
              >
                <svg />
              </span>
            </div>
            <div
              class="el-pn-content"
            >
              No organisation selected. You need to select an organisation to view available apps.
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Apps
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <h2
          class="el-subtitle"
        >
          AppMarket Visibility and Installation Management
        </h2>
        <p
          class="el-has-grey-text el-body-text"
        >
          To set the visibility of an app in the AppMarket or to manage installations for your organisation or specific office groups, please select an app.
        </p>
        <div
          class="el-mb5"
        >
          <h2
            class="el-subtitle"
          >
            Organisations
          </h2>
          <p
            class="el-has-grey-text el-body-text"
          >
            You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
          </p>
          <div
            class="el-border-radius controls-container"
          >
            <div
              class="el-input-group"
            >
              <select
                class="el-wfull el-select"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
                <option
                  value="value"
                >
                  name
                </option>
                <option
                  value="value"
                >
                  name
                </option>
              </select>
              <label
                class="el-label"
                for="myId"
              >
                Select Organisation
              </label>
            </div>
          </div>
        </div>
        <div
          class="controls-container"
        >
          <div
            class="input-full-width el-input-group"
          >
            <input
              class="el-input"
              id="test-static-id"
              name="searchTerm"
              placeholder="Developer or App"
              type="text"
              value=""
            />
            <label
              class="el-label"
              for="test-static-id"
            >
              Search
            </label>
          </div>
        </div>
      </aside>
      <section
        class="el-hfull el-page-container"
      >
        <div
          class="el-flex-justify-between el-flex-container"
        >
          <h1
            class="el-title"
          >
             AppMarket
          </h1>
        </div>
        <div
          class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-pn-content"
          >
            No organisation selected. You need to select an organisation to view available apps.
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
